--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iconify-json/lucide": "catalog:",
     "@iconify-json/simple-icons": "catalog:",
     "@nuxt/ui": "catalog:",
+    "@upstash/redis": "^1.35.7",
     "nuxt": "catalog:",
     "nuxt-auth-utils": "catalog:"
   },
