--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@iconify-json/simple-icons": "catalog:",
     "@nuxt/ui": "catalog:",
     "@upstash/redis": "^1.35.7",
+    "@vercel/analytics": "catalog:",
     "nuxt": "catalog:",
     "nuxt-auth-utils": "catalog:"
   },
